--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@prisma/client": "^7.0.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
